Import mailer and workerpool
FIXME: cannot use user (type *domain.User) as type *swagger.User in field value.

Add docs
