# docs/go/api/swagger.yaml
@@ -179,7 +179,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/UserRegistrationResponse'
   /v1/users/activation:
     post:
       summary: Activate the user by the given token.
@@ -390,6 +390,17 @@ components:
           type: string
         password:
           type: string
+    UserRegistrationResponse:
+      properties:
+        user:
+          $ref: '#/components/schemas/User'
+      example:
+        user:
+          name: name
+          created_at: created_at
+          id: id
+          email: email
+          activated: true
     AuthenticationRequest:
       required:
       - email
