# docs/go/model_user_registration_response.go
@@ -1,0 +1,13 @@
+/*
+ * TODOS API
+ *
+ * Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
+ *
+ * API version: 0.1.9
+ * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
+ */
+package swagger
+
+type UserRegistrationResponse struct {
+	User *User `json:"user,omitempty"`
+}
